--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mdi/js": "^7.2.96",
+    "mdi-vue": "^3.0.13",
     "vue": "^3.2.47"
   },
   "devDependencies": {
