--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "@mdi/js": "^7.2.96",
     "mdi-vue": "^3.0.13",
-    "vue": "^3.2.47"
+    "vue": "^3.2.47",
+    "vuetify": "^3.1.13"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
