--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "vuetify": "^3.1.13"
   },
   "devDependencies": {
+    "@mdi/font": "^7.2.96",
     "@vitejs/plugin-vue": "^4.0.0",
+    "material-design-icons-iconfont": "^6.7.0",
     "sass": "^1.59.2",
     "vite": "^4.1.4"
   }
